--- a/public/css/style-blue.css
+++ b/public/css/style-blue.css
@@ -3558,6 +3558,10 @@ a.thumbnail.active {
 #footer-widgets a {
   color: #eee;
   text-decoration: none;
+  -webkit-transition: all .25s ease;
+  -moz-transition: all .25s ease;
+  -ms-transition: all .25s ease;
+  -o-transition: all .25s ease;
   transition: all .25s ease;
 }
 #footer-widgets a:hover {
@@ -3571,7 +3575,7 @@ a.thumbnail.active {
   border-top: solid 1px #555;
 }
 #footer a {
-  color: #ccc;
+  color: #0099da;
   text-decoration: none;
 }
 #footer a:hover {
@@ -4845,13 +4849,35 @@ input.input-lg[type="text"] {
     border-radius: 30px;
     z-index: 20;
   }
+  .timeline-2-avatar {
+    top: 20px;
+    left: -30px;
+    width: 45px;
+    height: 45px;
+    position: absolute;
+    background: transparent;
+    margin: 0 20px 0 -17px;
+    box-shadow: 0 0 0 4px #eee;
+    -webkit-font-smoothing: antialiased;
+    border-radius: 30px;
+    z-index: 20;
+    transition: 0.5s;
+  }
+  .timeline-2-avatar:hover {
+    -ms-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
   .timeline-2 li:hover .timeline-2-point {
     background-color: #444;
+  }
+  .timeline-2 li:hover .timeline-2-avatar {
+    opacity: 0.5;
   }
   .timeline-2 li .timeline-time {
     position: relative;
     top: 0px;
-    left: -150px;
+    left: -180px;
     z-index: 20;
     text-align: right;
     display: block;
@@ -4867,6 +4893,7 @@ input.input-lg[type="text"] {
     margin-top: -45px;
     position: relative;
     top: 0;
+    left: 10px;
   }
 }
 @media (max-width: 767px) {
@@ -4876,6 +4903,9 @@ input.input-lg[type="text"] {
     padding: 0;
   }
   .timeline-2-point {
+    display: none;
+  }
+  .timeline-2-avatar {
     display: none;
   }
   .timeline-2 li {
